--- a/ObjectOrientedDesign/BuildingSkillsInObjectOrientedDesignV4/oo-design/tox.ini
+++ b/ObjectOrientedDesign/BuildingSkillsInObjectOrientedDesignV4/oo-design/tox.ini
@@ -1,1 +1,21 @@
- 
+[tox]
+skipsdist=True
+requires =
+    tox
+
+[testenv]
+ignore_errors = True
+deps =
+    mypy
+    pylint
+    black
+    pytest
+    pytest-cov
+setenv = 
+    PYTHONPATH=src
+commands = 
+    mypy src
+    pylint src
+    black src
+    pytest --doctest-modules src
+    pytest --cov=src
